# FastAPI-test-app

./: .gitignore  alembic.ini  config.py  pyproject.toml
migrations/: env.py
migrations/versions/: 05_03_initial.py  2023-12-30_88d3480ab329_initial.py  2023-12-30_rename_pass.py  2024-01-07_a46f7a4dbeeb_add_operation_model.py  2024-03-06_create_operations.py  2024-03-10_add_message_model.py  93f34396ae27_initial.py  d29587fbff2f_database_creation.py
src/: config.py  database.py  main.py
src/auth/: auth.py  database.py  manager.py  models.py  router.py  schemas.py
src/chat/: models.py  router.py  schemas.py  ws_connect.py
src/operations/: models.py  router.py  schemas.py
src/tasks/: router.py  tasks.py
src/tests/: conftest.py  test_auth.py  test_operations.py
test_app/: main.py
test_app/auth/: auth.py  database.py  manager.py
test_app/models/: models.py
