[tool.poetry]
name = "fastapi-test-app"
version = "0.1.0"
description = ""
authors = ["Nazar Annakhalov <nazar.annahalov@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.106.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
